RESOLVED FIXED302719
[blocks-in-inline] Fix fast/block/margin-collapse/block-inside-inline/002/003/004.html
https://bugs.webkit.org/show_bug.cgi?id=302719
Summary [blocks-in-inline] Fix fast/block/margin-collapse/block-inside-inline/002/003...
alan
Reported 2025-11-18 09:33:23 PST
ssia
Attachments
Patch (4.54 KB, patch)
2025-11-18 09:38 PST, alan
no flags
[fast-cq]Patch (4.54 KB, patch)
2025-11-19 04:47 PST, alan
no flags
alan
Comment 1 2025-11-18 09:38:29 PST
alan
Comment 2 2025-11-19 04:47:51 PST
Created attachment 477430 [details] [fast-cq]Patch
EWS
Comment 3 2025-11-19 09:41:40 PST
Committed 303260@main (1ddf2f4eaa79): <https://commits.webkit.org/303260@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477430 [details].
Radar WebKit Bug Importer
Comment 4 2025-11-19 09:42:13 PST
Note You need to log in before you can comment on or make changes to this bug.