[blocks-in-inline] Fix fast/block/margin-collapse/block-inside-inline/002/003/004.html https://bugs.webkit.org/show_bug.cgi?id=302719

Reviewed by Antti Koivisto.

To support self-collapsed blocks inside inline content given how RenderBlockFlow manages margin state, we need to wrap individual blocks in anonymous blocks.

Test: fast/inline/blocks-in-inline-self-collapsing-block-with-margin.html

* LayoutTests/fast/inline/blocks-in-inline-self-collapsing-block-with-margin-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-self-collapsing-block-with-margin.html: Added.
* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::layoutWithFormattingContextForBlockInInline):
* Source/WebCore/rendering/updating/RenderTreeBuilderInline.cpp:
(WebCore::RenderTreeBuilder::Inline::wrapRunsOfBlocksInAnonymousBlock):

Canonical link: https://commits.webkit.org/303260@main